<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <!--Title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/pure_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wallet_title_textview"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="1dp"
            android:background="@color/d9grey" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <!--余额Balance-->
        <LinearLayout
            android:id="@+id/wallet_balance"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/icon_balance" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wallet_balance"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="6000元"
                android:textColor="@color/_9bgrey"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:src="@drawable/icon_jump" />
        </LinearLayout>


        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />


        <!--消费历史Consumption-->
        <LinearLayout
            android:id="@+id/wallet_consumption"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/icon_consumption" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wallet_consumption"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="2.00元（188路）"
                android:textColor="@color/_9bgrey"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:src="@drawable/icon_jump" />
        </LinearLayout>

        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />

        <!--充值Recharge-->
        <LinearLayout
            android:id="@+id/wallet_recharge"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/icon_recharge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wallet_recharge"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:src="@drawable/icon_jump" />
        </LinearLayout>

        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />

        <!--实体卡Card-->
        <LinearLayout
            android:id="@+id/walletCard"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/icon_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/walletCard"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:src="@drawable/icon_jump" />
        </LinearLayout>

        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />

        <!--手机号Telephone-->
        <LinearLayout
            android:id="@+id/wallet_tel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/icon_telephone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/wallet_tel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:src="@drawable/icon_jump" />
        </LinearLayout>

        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />

        <!--退出登录Quit-->
        <LinearLayout
            android:id="@+id/wallet_quit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:background="@color/pure_white"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/wallet_quit_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pure_white"
                android:text="@string/wallet_quit"
                android:textColor="@color/theme_color"
                android:textSize="14sp" />
        </LinearLayout>

        <!--分割线-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d9grey" />

    </LinearLayout>

    <include
        android:id="@+id/walletTab"
        layout="@layout/tab" />


</LinearLayout>